<?xml version="1.0"?>
<package format="2">
  <name>detector</name>
  <version>0.0.0</version>
  <description>The detector package</description>

  <maintainer email="m.c.chen@outlook.com">Michael.Chen</maintainer>

  <license>GPLv3</license>

  <url type="website">http://www.tgeek.tech</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
